samples/_failures_safe/1761129120_33858d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_689f4aa4.c: In function ‘update_stats’:
./samples/SAFE/__tmp_689f4aa4.c:120:53: error: expected ‘)’ at end of input
  120 |     analyzer->stats.latest_timestamp[sizeof(analyzer
      |                                            ~        ^
      |                                                     )
./samples/SAFE/__tmp_689f4aa4.c:120:5: error: expected declaration or statement at end of input
  120 |     analyzer->stats.latest_timestamp[sizeof(analyzer
      |     ^~~~~~~~
